# project_location_model

./: .gitignore  AGENTS.MD  LICENSE  README.md  build-docs.sh  generate_schema_docs.py  pyproject.toml
.github/: installMDBooklocally.sh
.github/workflows/: builddeploy.yaml  npm-audit.yml  runtests.yml
frontend/: .refactoring  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/deployment-scripts/: flattenSchemas.js
frontend/public/: Project_Location_Data_Template_EN_V03.xlsx  invalid_data.xlsx  missing_lat_lon.xlsx  sample_geojson.json  sheet_not_found.xlsx
frontend/src/: App.scss  App.tsx  AppConfig.jsonc  scanPackages.ts  vulnerable-packages.txt
frontend/src/components/: FileUpload.tsx  FileValidator.tsx  GeoServerAuth.tsx  GeoServerEditor.tsx  MapComponent.tsx  SendMailButton.tsx
frontend/src/services/: Config.ts
model/json-schema/: project_core_schema_en-v2.json  project_core_schema_en.json
model/model-docs/: README.md  book.toml  preprocessor.sh
model/model-docs/src/: SUMMARY.md  annex1-v2.md  annex1-v3.md  annex1.md  annex2.md  chapter_1.md  collection-v2.md  collection-v3.md  collection.md  custom.css  disclaimer.md  faqs-v2.md  faqs.md  introduction.md  quickstart-v2.md  quickstart-v3.md  quickstart.md  seite_2.md  (+3 more)
model/schema/: dac5_schema.json  feature_project_schema.json  iati_location_type_v2_0_3.json  location_type_name_schema_en.json  location_type_name_schema_fr.json  project_core_schema_en.json  project_core_schema_fr.json  sector_schema_en.json  sector_schema_fr.json
(+22 files in other folders)
